# ResolveHub

./: .env.template  create_superuser.py  main.py  pyproject.toml
app/: auth.py  main.py
app/admin/: admin.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  employee.py  task.py
app/core/: config.py  database.py  email_client.py
app/models/: employee.py  task.py
app/repositories/: employee_repository.py  task_repository.py
app/routes/: email_incoming.py  employee_router.py  task_router.py  task_routes.py
app/schemas/: employee.py  task.py
app/services/: employee_service.py  task_service.py
migrations/: env.py
migrations/versions/: 2f59f5ab5346_initial.py  8f8be4ca747d_add_unique_constraint_to_employee_email.py
tests/: conftest.py  test_employee.py  test_employee_repository.py  test_task.py  test_task_repository.py
